--- a/src/styles/default.scss
+++ b/src/styles/default.scss
@@ -1,3 +1,14 @@
 * {
     box-sizing: border-box;
 }
+
+// headings
+h1, .h1 {
+    font-size: 3rem;
+    line-height: 56px;
+
+    @media (min-width: 481px) {
+        font-size: 4.5rem;
+        line-height: 1.2;
+    }
+}
