--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,7 +2,8 @@
     Includes all defaults and global styles.
 */ 
 
-@import "~bootstrap/scss/bootstrap";
-@import "default";
+@import "bootstrap";
 @import "components";
+@import "default";
+
 
