--- a/src/components/card/Card.scss
+++ b/src/components/card/Card.scss
@@ -1,18 +1,28 @@
 .component-card {
     padding: 20px;
     border: 1px solid #ebebeb;
+    box-shadow: 0 0 3px rgba(0, 0, 0, .30);
+    display: flex;
+    flex-direction: column;
 
     &__card-image {
         overflow: hidden;
     }
 
-    &__card-text {
-        padding: 0 5px;
-        
-        @media (min-width: 768px) {
-            min-height: 170px;
-        }
+    &__card-body {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
     }
+
+        &__card-text {
+            padding: 0 5px;
+            
+            @media (min-width: 768px) {
+                min-height: 170px;
+            }
+        }
 
     &__card-cta {
         text-align: center;
