Created CardList component (container)

--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -7,6 +7,7 @@
 @import "../components/button/Button.scss";
 @import "../components/card/Card.scss";
 @import "../components/imageCanvas/ImageCanvas.scss";
+@import "../components/CardList/CardList.scss";
 
 
 /*
