--- a/src/styles/_default.scss
+++ b/src/styles/_default.scss
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
+body {
+    font-family: 'Poppins', sans-serif;
+}
+
 // headings
 h1, .h1 {
     font-size: 3rem;
