Created Tabs component (containers) and installed DOMPurify to sanitize html from tab content data.

--- a/src/components/card/Card.scss
+++ b/src/components/card/Card.scss
@@ -19,8 +19,12 @@
         &__card-text {
             padding: 0 5px;
             
+            p {
+                margin: 0;
+            }
+
             @media (min-width: 768px) {
-                min-height: 170px;
+                // min-height: 170px;
             }
         }
 
