--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -7,6 +7,11 @@
 @import "../components/button/Button.scss";
 @import "../components/card/Card.scss";
 @import "../components/imageCanvas/ImageCanvas.scss";
+@import "../components/containers/tabs/Tab.scss";
+
+/*
+    Containers
+*/ 
 @import "../components/containers/CardList/CardList.scss";
 
 
@@ -15,3 +20,4 @@
 */ 
 
 @import "../components/pages/exercise1/Exercise1.scss";
+@import "../components/pages/excercise2/Exercise2.scss";
