--- a/src/components/button/Button.scss
+++ b/src/components/button/Button.scss
@@ -13,7 +13,8 @@
     transition: color .3s ease, border-color .3s ease, background-color .3s ease;
 
     &:hover {
-        background-color: #333333;
+        background-color: $accentColor;
+        border-color: $accentColor;
         color: #fff;
     }
 }
