Added wave accent

--- a/src/components/card/Card.scss
+++ b/src/components/card/Card.scss
@@ -4,6 +4,7 @@
     box-shadow: 0 0 3px rgba(0, 0, 0, .30);
     display: flex;
     flex-direction: column;
+    background-color: #fff;
 
     &__card-image {
         overflow: hidden;
