--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -8,6 +8,7 @@
 @import "../components/card/Card.scss";
 @import "../components/imageCanvas/ImageCanvas.scss";
 @import "../components/waveAccent/WaveAccent.scss";
+@import "../components/callToActionButton/CallToActionButton.scss";
 
 
 /*
@@ -23,3 +24,4 @@
 
 @import "../components/pages/exercise1/Exercise1.scss";
 @import "../components/pages/excercise2/Exercise2.scss";
+@import "../components/pages/Home.scss";
