--- a/src/styles/_default.scss
+++ b/src/styles/_default.scss
@@ -9,9 +9,14 @@ body {
 // headings
 h1, .h1 {
     font-size: 3rem;
-    line-height: 56px;
+    line-height: 1;
 
     @media (min-width: 481px) {
+        font-size: 3.5rem;
+        line-height: 56px;
+    }
+
+    @media (min-width: 768px) {
         font-size: 4.5rem;
         line-height: 1.2;
     }
